@@ -4,4 +4,7 @@
  *
  * @author <a href="mailto:ball@iprotium.com">Allen D. Ball</a>
  */
+@ManifestSection
 package iprotium.upnp;
+
+import iprotium.annotation.ManifestSection;
