@@ -6,4 +6,7 @@
  *
  * @author <a href="mailto:ball@iprotium.com">Allen D. Ball</a>
  */
+@ManifestSection
 package iprotium.upnp.ssdp;
+
+import iprotium.annotation.ManifestSection;
